feat: basic colors

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dashboard</title>
+
+        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/breakpoints/xl.css">
+        <link rel="stylesheet" href="./css/breakpoints/lg.css">
+        <link rel="stylesheet" href="./css/breakpoints/md.css">
+        <link rel="stylesheet" href="./css/breakpoints/sm.css">
+        <link rel="stylesheet" href="./css/breakpoints/xs.css">
+
     </head>
 
     <body>
@@ -27,7 +35,7 @@
                     <h4 class="aside-section-title">main</h4>
                     <ul>
                         <li><a href="">Dashboard</a></li>
-                        <li><a href="">Analysts</a></li>
+                        <li class="active"><a href="">Analysts</a></li>
                         <li><a href="">Contacts</a></li>
                     </ul>
                 </article>
