feat: menu buttons

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </head>
 
     <body>
-        <aside id="menu" class="">
-            <section id="top">
+        <aside id="aside" class="">
+            <section id="aside-top">
                 <div id="profile">
                     <img src="./assets/images/avatar.jpg" alt="" id="userphoto">
                     <div id="user-info">
@@ -28,11 +28,11 @@
                 </div>
 
                 <form action="">
-                    <input type="search" id="" placeholder="Search">
+                    <input type="search" id="search-bar" placeholder="Search">
                 </form>
             </section>
 
-            <section>
+            <section id="menu-list">
                 <article>
                     <h3 class="aside-section-title">main</h3>
                     
