fix: toggler menu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <title>Dashboard</title>
 
         <link rel="stylesheet" href="./css/main.css">
-        <link rel="stylesheet" href="./css/breakpoints/xs.css">
         <link rel="stylesheet" href="./css/breakpoints/sm.css">
         <link rel="stylesheet" href="./css/breakpoints/md.css">
         <link rel="stylesheet" href="./css/breakpoints/lg.css">
@@ -17,6 +16,13 @@
     </head>
 
     <body>
+        <header>
+            <div id="menu-toggler">
+                <input type="checkbox" value="Menu" id="btn-menu">
+                <label for="btn-menu">Menu</label>
+            </div>
+        </header>
+
         <aside id="aside" class="">
             <section id="aside-top">
                 <div id="profile">
@@ -88,10 +94,54 @@
             </section>
 
         </aside>
+
+
+
         <main>
-            <div id="menu-toggler">
-                <input type="checkbox" value="Menu" id="btn-menu">
-                <label for="btn-menu">Menu</label>
+
+            <div id="content">
+                <div class="card">
+                    <h1>lorem ipsuon</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat facilis nulla, repudiandae
+                        veritatis eaque ipsum odio aliquam ab perferendis quibusdam et voluptatibus repellendus
+                        consequatur delectus ea, reprehenderit illum! Similique, quisquam.</p>
+
+                </div>
+                <div class="card">
+                    <h1>lorem ipsuon</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat facilis nulla, repudiandae
+                        veritatis eaque ipsum odio aliquam ab perferendis quibusdam et voluptatibus repellendus
+                        consequatur delectus ea, reprehenderit illum! Similique, quisquam.</p>
+
+                </div>
+                <div class="card">
+                    <h1>lorem ipsuon</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat facilis nulla, repudiandae
+                        veritatis eaque ipsum odio aliquam ab perferendis quibusdam et voluptatibus repellendus
+                        consequatur delectus ea, reprehenderit illum! Similique, quisquam.</p>
+
+                </div>
+                <div class="card">
+                    <h1>lorem ipsuon</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat facilis nulla, repudiandae
+                        veritatis eaque ipsum odio aliquam ab perferendis quibusdam et voluptatibus repellendus
+                        consequatur delectus ea, reprehenderit illum! Similique, quisquam.</p>
+
+                </div>
+                <div class="card">
+                    <h1>lorem ipsuon</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat facilis nulla, repudiandae
+                        veritatis eaque ipsum odio aliquam ab perferendis quibusdam et voluptatibus repellendus
+                        consequatur delectus ea, reprehenderit illum! Similique, quisquam.</p>
+
+                </div>
+                <div class="card">
+                    <h1>lorem ipsuon</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat facilis nulla, repudiandae
+                        veritatis eaque ipsum odio aliquam ab perferendis quibusdam et voluptatibus repellendus
+                        consequatur delectus ea, reprehenderit illum! Similique, quisquam.</p>
+
+                </div>
             </div>
         </main>
     </body>
