feat: fixed aside menu

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <nav1>
                         <ul>
                             <li><a href="">Dashboard</a></li>
-                            <li class="active"><a href="">Analysts</a></li>
+                            <li><a href="" class="active">Analysts</a></li>
                             <li><a href="">Contacts</a></li>
                         </ul>
                     </nav1>
@@ -81,8 +81,8 @@
 
             <section id="aside-footer">
                 <article>
-                    <div class="radio-group active">
-                        <label for="public-radio">Public</label>
+                    <div class="radio-group">
+                        <label for="public-radio" class="active">Public</label>
                         <input type="radio" name="account-type" id="public-radio" checked>
                     </div>
 
