fix: account privacy toggler

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <section id="aside-footer">
                 <article>
                     <div class="radio-group">
-                        <label for="public-radio" class="active">Public</label>
+                        <label for="public-radio">Public</label>
                         <input type="radio" name="account-type" id="public-radio" checked>
                     </div>
 
